<resources>
    <string name="app_name">GeofenceBasedAttendance</string>
    <string name="work_smart_skills_matters">Work Smart, Skills Matters</string>
    <string name="not_register">not_register</string>
    <string name="register">register</string>
    <string name="prompt_password">prompt_password</string>
    <string name="phone_number">phone_number</string>
    <string name="prompt_email">prompt_email</string>
    <string name="name">name</string>
    <string name="forgot_password">forgot_password</string>
    <string name="login">login</string>
    <string name="work_Smart">work_smart_skills_matter</string>
    <string name="nicholas_nzovia_maundu">Nicholas Nzovia Maundu</string>
    <string name="todo">TODO</string>
    <string name="activities">Activities</string>
    <string name="tasks">Tasks</string>
    <string name="lecturer">Lecturer</string>
    <string name="student">Student</string>
    <string name="remember_each_experience">remember_each_experience</string>
    <string name="student_email">student email</string>
    <string name="student_number">Student Number</string>
    <string name="full_name">Full Name</string>
    <string name="student_course">Student Course</string>
    <string name="university">University</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="view_students">View Students</string>
    <string name="students">Students</string>
    <string name="create_fence">Create Fence</string>
    <string name="email">Email</string>
    <string name="title_activity_geo_fence">Map</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="communication_here">Communication Here</string>
    <string name="attendance">Attendance</string>
    <string name="already_registered">Already Registered</string>
    <string name="staff_number">staff number</string>
    <string name="institutional_email">Institutional email</string>
    <string name="lecturer_dashboard">Lecturer Dashboard</string>
    <string name="staff">STAFF</string>
    <string name="longitutide">Longitutide :</string>
    <string name="latitude">Latitude :</string>
    <string name="valid_registration_number">Valid Registration number</string>
    <string name="time_in">Time In</string>
    <string name="attend">Attend</string>
    <string name="leave">Leave</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="comments">Comments:</string>
    <string name="add">Add</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="post_title">Post title</string>
    <string name="post_description">post description</string>
    <string name="search_here">search here</string>
    <string name="enter_unit_name">Enter Unit Name</string>
    <string name="enter_unit_code">Enter Unit Code</string>
    <string name="geofence_data">GeoFence Data</string>
    <string name="share_fence">Share Fence</string>
    <string name="fence_history">Fence History</string>
    <string name="attend_class">attend class</string>
    <string name="message">Message</string>
    <string name="cancel">Cancel</string>
    <string name="students_inattendance">Students InAttendance</string>
    <string name="lec_name">Name</string>
    <string name="student_s_dashboard">Student\'s DashBoard</string>


</resources>