<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MAKE STUDENT POST"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:layout_below="@+id/post"
            android:background="#000000"
            />
        <ImageButton
            android:id="@+id/closePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_centerHorizontal="true"
            android:background="@color/layouts"
            android:src="@drawable/ic_close"
            />
    </RelativeLayout>
    <EditText
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_title"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_description"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/timeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:inputType="time"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/commentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_comment"
        android:layout_margin="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/addPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/add"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            />

    </RelativeLayout>

</LinearLayout>