<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Authenticate Attendance"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="#000000"
        />
    <EditText
        android:id="@+id/validNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valid_registration_number"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/timeIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time_in"
        android:layout_margin="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/leave"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/attend"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            />

    </RelativeLayout>
    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:fitsSystemWindows="true"
        android:background="@drawable/round_background"
        android:padding="15dp"
        android:layout_gravity="center"
        android:src="@drawable/fingerprint"
        android:layout_margin="15dp"
        />

</LinearLayout>