<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lecturer.LecturerLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/lecIcon"
            android:layout_width="250dp"
            android:layout_height="220dp"
            android:src="@drawable/attendclass"
            android:scaleType="fitXY"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">


            <EditText
                android:id="@+id/lecEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/lecPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/leclogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/gradient"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/lecLogin"
            android:layout_margin="15dp"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:layout_marginStart="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/color_primary"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/registerLecturer"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="130dp"
                android:text="@string/register"
                android:textColor="@color/color_primary"
                android:textSize="16sp" />
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>