<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lecturer.RegisterLecturer">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >

        <EditText
            android:id="@+id/lecName"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/full_name"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameError"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <EditText
            android:id="@+id/staffNo"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/staff_number"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailerror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberError"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <EditText
            android:id="@+id/lecEmail"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/institutional_email"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passerror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailerror"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

    <EditText
        android:id="@+id/password"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/registerLecturer"
            android:layout_width="150dp"
            android:layout_height="37dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="190dp"
            android:text="@string/register"
            android:layout_below="@+id/passerror"
            android:textColor="@color/color_primary"
            android:background="@drawable/gradient"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="5dp"
            android:layout_below="@+id/registerLecturer"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:id="@+id/alreadyregistered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="@string/already_registered"
                android:textColor="@color/color_primary"
                android:textSize="16sp" />
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>


        </LinearLayout>


</RelativeLayout>